# linuxcnc

./: README.md
extends/blk_scope/: AxisStrategyFatory.h  CMakeLists.txt  IServoStrategy.h  ReadMe.txt  blk_scope.cc  blk_scope.hh  gather_sender.cc  gather_sender.hh  hal_ctrl_cmd_interactive.py  update_blk_scope.sh
extends/cnc-servo/: ReadMe  cnc_server.py  hal_scope_interface.py  linuxcnc_interface.py  nc_manager.py  simulation_manager.py  simulation_result_manager.py
src/emc/motion/: control.c  motion.h
src/rtapi/: uspace_rtapi_app.cc
